# drowned-terminal

./: .gitignore  ARCHITECTURE_DECISIONS.md  README.md  app.py  discovery.py  netscape-agent@.service  netscape-coordinator@.service  node_agent.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: defaults.json
core/: colors.py  modules.py  sounds.py  tiling.py
modules/: animations.py  music.py  pipboy.py  roommap.py  video.py
tests/: test_colors.py  test_sounds.py  test_tiling.py
